# goit-pythonweb-hw-10

./: .env.example  README.md  main.py  pyproject.toml
migrations/versions/: 5f109089b354_init.py  876c9784e76c_added_auth_to_contact_api.py  9160583eff26_update_contact_fields_and_nullability.py  aca7d93baadc_new_user_model.py  b5477b4f4b79_hashed_password.py  c1646b6e273f_add_to_model_user_filed_confirmed.py  ea7cd4ee07c2_init_database.py  ed5dc92496e7_added_tokens.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py  messages.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  users.py
